# fwupd

./: .pre-commit-config.yaml
plugins/: meson.build
plugins/pixart-tp/: fu-pxi-tp-common.c  fu-pxi-tp-common.h  fu-pxi-tp-define.h  fu-pxi-tp-device.c  fu-pxi-tp-firmware.c  fu-pxi-tp-firmware.h  fu-pxi-tp-plugin.c  fu-pxi-tp-register.c  fu-pxi-tp-register.h  fu-pxi-tp-struct.h  fu-pxi-tp.rs  fu-self-test.c  meson.build  pixart-tp.quirk
plugins/pixart-tp/tests/: pxi-tp.json  vendor-example-setup.json
